--- a/package.json
+++ b/package.json
@@ -1,14 +1,16 @@
 {
   "name": "mcsbot-dashboard",
   "version": "1.0.0",
-  "main": "server.js",
+  "private": true,
+  "type": "commonjs",
   "scripts": {
     "start": "node server.js"
   },
   "dependencies": {
-    "discord.js": "^14.15.0",
-    "express": "^4.18.2",
-    "express-session": "^1.17.3",
-    "node-fetch": "^3.3.1"
+    "express": "4.22.1",
+    "express-session": "1.17.3",
+    "discord.js": "14.15.3",
+    "node-fetch": "3.3.2",
+    "dotenv": "16.4.5"
   }
 }
