--- a/package.json
+++ b/package.json
@@ -1,16 +1,14 @@
 {
-  "name": "mcsbot-dashboard",
+  "name": "mcs-dashboard",
   "version": "1.0.0",
-  "private": true,
+  "main": "server.js",
   "type": "commonjs",
   "scripts": {
     "start": "node server.js"
   },
   "dependencies": {
-    "express": "4.22.1",
-    "express-session": "1.17.3",
-    "discord.js": "14.15.3",
-    "node-fetch": "3.3.2",
-    "dotenv": "16.4.5"
+    "discord.js": "^14.15.3",
+    "dotenv": "^16.4.5",
+    "express": "^4.22.1"
   }
 }
