--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "start": "node server.js"
   },
   "dependencies": {
-    "discord.js": "^14.15.3",
-    "dotenv": "^16.4.5",
-    "express": "^4.22.1"
+    "express": "4.22.1",
+    "discord.js": "14.15.3",
+    "dotenv": "16.4.5"
   }
 }
